force-app/main/default/objects/LT_Vehicle__c/LT_Vehicle__c.object-meta.xml
<CustomObject>
    <description>Veiculo utilizado por um motorista da malha LogiTrack.</description>
    <label>Veiculo</label>
    <nameField>
        <displayFormat>VEIC-{00000}</displayFormat>
        <label>Codigo do Veiculo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Veiculos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>