force-app/main/default/objects/LT_Vehicle__c/fields/LT_Brand_Model__c.field-meta.xml
<CustomField>
    <fullName>LT_Brand_Model__c</fullName>
    <description>Marca e modelo do veiculo.</description>
    <label>Marca / Modelo</label>
    <type>Text</type>
    <length>80</length>
</CustomField>