force-app/main/default/objects/LT_Vehicle__c/fields/LT_Cargo_Capacity_M3__c.field-meta.xml
<CustomField>
    <fullName>LT_Cargo_Capacity_M3__c</fullName>
    <description>Volume util de carga em metros cubicos.</description>
    <label>Capacidade de Carga (m3)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
</CustomField>