force-app/main/default/objects/LT_Vehicle__c/fields/LT_Cargo_Capacity_Packages__c.field-meta.xml
<CustomField>
    <fullName>LT_Cargo_Capacity_Packages__c</fullName>
    <description>Quantidade maxima de pacotes que o veiculo comporta por viagem.</description>
    <label>Capacidade de Carga (pacotes)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>