force-app/main/default/objects/LT_Vehicle__c/fields/LT_CRLV_Expiration__c.field-meta.xml
<CustomField>
    <fullName>LT_CRLV_Expiration__c</fullName>
    <description>Data de vencimento do licenciamento anual do veiculo.</description>
    <label>Vencimento do Licenciamento (CRLV)</label>
    <type>Date</type>
</CustomField>