force-app/main/default/objects/LT_Vehicle__c/fields/LT_Driver__c.field-meta.xml
<CustomField>
    <fullName>LT_Driver__c</fullName>
    <description>Motorista que opera este veiculo.</description>
    <label>Motorista</label>
    <referenceTo>LT_Driver__c</referenceTo>
    <relationshipLabel>Veiculos</relationshipLabel>
    <relationshipName>LT_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>