force-app/main/default/objects/LT_Vehicle__c/fields/LT_Insurance_Expiration__c.field-meta.xml
<CustomField>
    <fullName>LT_Insurance_Expiration__c</fullName>
    <description>Data de vencimento da apolice de seguro do veiculo.</description>
    <label>Vencimento do Seguro</label>
    <type>Date</type>
</CustomField>