force-app/main/default/objects/LT_Vehicle__c/fields/LT_Model_Year__c.field-meta.xml
<CustomField>
    <fullName>LT_Model_Year__c</fullName>
    <description>Ano de fabricacao/modelo do veiculo.</description>
    <label>Ano do Modelo</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>