force-app/main/default/objects/LT_Vehicle__c/fields/LT_Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>LT_Owner_Type__c</fullName>
    <description>Quem e o proprietario do veiculo.</description>
    <label>Propriedade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proprio do Motorista</fullName>
            </value>
            <value>
                <fullName>Alugado</fullName>
            </value>
            <value>
                <fullName>Da Empresa</fullName>
            </value>
            <value>
                <fullName>Do Parceiro Operacional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>