force-app/main/default/objects/LT_Vehicle__c/fields/LT_Plate__c.field-meta.xml
<CustomField>
    <fullName>LT_Plate__c</fullName>
    <description>Placa do veiculo (padrao antigo AAA0000 ou Mercosul AAA0A00).</description>
    <inlineHelpText>Informe a placa sem tracos, ex.: ABC1D23 ou ABC1234.</inlineHelpText>
    <label>Placa</label>
    <type>Text</type>
    <length>8</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>