force-app/main/default/objects/LT_Vehicle__c/fields/LT_Vehicle_Status__c.field-meta.xml
<CustomField>
    <fullName>LT_Vehicle_Status__c</fullName>
    <description>Situacao operacional do veiculo.</description>
    <inlineHelpText>Somente veiculos Ativos podem ser usados em rotas.</inlineHelpText>
    <label>Status do Veiculo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ativo</fullName>
                <default>true</default>
                <label>Ativo</label>
            </value>
            <value>
                <fullName>Em Manutencao</fullName>
            </value>
            <value>
                <fullName>Inativo</fullName>
            </value>
            <value>
                <fullName>Bloqueado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>