force-app/main/default/objects/LT_Vehicle__c/fields/LT_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>LT_Vehicle_Type__c</fullName>
    <description>Categoria fisica do veiculo.</description>
    <inlineHelpText>Motos e bicicletas ficam limitadas a 80 pacotes.</inlineHelpText>
    <label>Tipo de Veiculo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bicicleta / Eletrica</fullName>
            </value>
            <value>
                <fullName>Moto</fullName>
            </value>
            <value>
                <fullName>Carro de Passeio</fullName>
            </value>
            <value>
                <fullName>Fiorino / Furgao Pequeno</fullName>
            </value>
            <value>
                <fullName>Van</fullName>
            </value>
            <value>
                <fullName>VUC</fullName>
            </value>
            <value>
                <fullName>Caminhao 3/4</fullName>
            </value>
            <value>
                <fullName>Caminhao Toco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>