force-app/main/default/objects/LT_Vehicle__c/validationRules/LT_Vehicle_Capacity_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Vehicle_Capacity_Positive</fullName>
    <active>true</active>
    <description>Capacidades do veiculo nao podem ser negativas.</description>
    <errorConditionFormula>OR(LT_Cargo_Capacity_M3__c &lt; 0, LT_Cargo_Capacity_Packages__c &lt; 0)</errorConditionFormula>
    <errorMessage>As capacidades de carga nao podem ser negativas.</errorMessage>
</ValidationRule>