force-app/main/default/objects/LT_Vehicle__c/validationRules/LT_Vehicle_Validate_Plate.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Vehicle_Validate_Plate</fullName>
    <active>true</active>
    <description>Valida a placa nos padroes antigo (AAA0000) ou Mercosul (AAA0A00).</description>
    <errorConditionFormula>AND(NOT(ISBLANK(LT_Plate__c)), NOT(OR(REGEX(UPPER(LT_Plate__c), "^[A-Z]{3}[0-9]{4}$"), REGEX(UPPER(LT_Plate__c), "^[A-Z]{3}[0-9][A-Z][0-9]{2}$"))))</errorConditionFormula>
    <errorDisplayField>LT_Plate__c</errorDisplayField>
    <errorMessage>Placa invalida. Use o padrao AAA0000 (antigo) ou AAA0A00 (Mercosul), sem tracos.</errorMessage>
</ValidationRule>