force-app/main/default/objects/LT_Vehicle__c/validationRules/LT_Vehicle_Year_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Vehicle_Year_Range</fullName>
    <active>true</active>
    <description>Ano do modelo fora da faixa aceitavel.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(LT_Model_Year__c)), OR(LT_Model_Year__c &lt; 1990, LT_Model_Year__c &gt; YEAR(TODAY()) + 1))</errorConditionFormula>
    <errorDisplayField>LT_Model_Year__c</errorDisplayField>
    <errorMessage>Informe um Ano do Modelo entre 1990 e o proximo ano.</errorMessage>
</ValidationRule>