force-app/main/default/objects/LT_Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>LT_Plate__c</columns>
    <columns>LT_Vehicle_Type__c</columns>
    <columns>LT_Brand_Model__c</columns>
    <columns>LT_Vehicle_Status__c</columns>
    <columns>LT_Driver__c</columns>
    <columns>LT_Document_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>